@@ -277,7 +277,7 @@ get_user_groups (WCHAR *logonserver, cygsidlist &grp_list,
   for (DWORD i = 0; i < cnt; ++i)
     {
       cygsid gsid;
-      DWORD glen = MAX_SID_LEN;
+      DWORD glen = SECURITY_MAX_SID_SIZE;
       WCHAR dom[MAX_DOMAIN_NAME_LEN + 1];
       DWORD dlen = sizeof (dom);
       SID_NAME_USE use = SidTypeInvalid;
@@ -325,7 +325,7 @@ get_user_local_groups (PWCHAR logonserver, PWCHAR domain,
   for (DWORD i = 0; i < cnt; ++i)
     {
       cygsid gsid;
-      DWORD glen = MAX_SID_LEN;
+      DWORD glen = SECURITY_MAX_SID_SIZE;
       WCHAR dom[MAX_DOMAIN_NAME_LEN + 1];
       DWORD domlen = MAX_DOMAIN_NAME_LEN + 1;
 
@@ -361,7 +361,7 @@ get_user_local_groups (PWCHAR logonserver, PWCHAR domain,
 	  if (bg_ptr)
 	    {
 	      wcscpy (bg_ptr, dg_ptr);
-	      glen = MAX_SID_LEN;
+	      glen = SECURITY_MAX_SID_SIZE;
 	      domlen = MAX_DOMAIN_NAME_LEN + 1;
 	      if (LookupAccountNameW (NULL, builtin_grp, gsid, &glen,
 				      dom, &domlen, &use))
@@ -687,7 +687,8 @@ verify_token (HANDLE token, cygsid &usersid, user_groups &groups, bool *pintern)
      is not well_known_null_sid, it must match pgrpsid */
   if (intern && !groups.issetgroups ())
     {
-      const DWORD sd_buf_siz = MAX_SID_LEN + sizeof (SECURITY_DESCRIPTOR);
+      const DWORD sd_buf_siz = SECURITY_MAX_SID_SIZE
+			       + sizeof (SECURITY_DESCRIPTOR);
       PSECURITY_DESCRIPTOR sd_buf = (PSECURITY_DESCRIPTOR) alloca (sd_buf_siz);
       cygpsid gsid (NO_SID);
       NTSTATUS status;
